# secure-code-analyzer

./: .flake8  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  gitlab-ci-sast-pipeline.md  jenkins.md  js-report.json  php-report.json  pyproject.toml  report.json  safe.php  sca.yaml  test-js-report.json  test-php-report.json  test-report.json  test.json
.github/workflows/: github-actions.yml
examples/js-vuln-demo/: app.js
examples/php-vuln-demo/: index.php
rules/js/: js-rules.yaml  security-rules.yaml
rules/php/: php-rules.yaml  security-rules.yaml
src/sca/: __init__.py  cli.py  config.py
src/sca/engine/: __init__.py  rule_engine.py
src/sca/parser/: __init__.py  base_parser.py  js_parser.py  php_parser.py
src/sca/report/: __init__.py  json_reporter.py  sarif_reporter.py
src/sca/taint/: __init__.py  analyzer.py
src/sca/utils/: __init__.py  file_utils.py  logging.py
tests/integration/: test_scanning.py
tests/unit/: test_cli.py
